# link-getter

./: Makefile  README.md  docker-compose.yml
project/: Dockerfile  Dockerfile.prod  pyproject.toml
project/app/: link_getter.py  main.py
project/app/api/: crud.py  links.py
project/app/models/: pydantic.py  tortoise.py
project/db/: create.sql
project/tests/: test_links.py  test_links_unit.py
