[tool.poetry]
name = "link-getter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
asyncpg = "^0.25.0"
tortoise-orm = "^0.17.8"
requests = "^2.26.0"
gunicorn = "^20.1.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.7.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"
pytest = "^6.2.5"
pytest-xdist = "^2.5.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
